some formatting and syntax fixes on existing guides, and adding new OpenSUSE Deployment Guide

--- a/_posts/2024/2024-11-12-Cobbler-v3.3.6-Beginners-Guide.md
+++ b/_posts/2024/2024-11-12-Cobbler-v3.3.6-Beginners-Guide.md
@@ -250,7 +250,7 @@ Mount the Fedora 34 Server installation media and run the `cobbler import`
 
 ```shell
 mkdir /mnt/Fedora
-mount -t iso9660 -o loop,ro /home/fedora/Downloads/Fedora-Server-dvd-x86_64-34-1.2.iso /mnt/Fedora
+mount -t iso9660 -o loop,ro ~/Downloads/Fedora-Server-dvd-x86_64-34-1.2.iso /mnt/Fedora
 cobbler import --name=Fedora34 --arch=x86_64 --path=/mnt/Fedora
 ```
 
@@ -298,7 +298,7 @@ cobbler sync
 Take similar steps as above to import and autoinstall Fedora 37 Server, being sure to use unique names for Cobbler Distros, Profiles, and Systems, as well as unique MAC addresses and IP addresses for Systems (unless configured differently in `/etc/cobbler/settings.yaml`)
 
 ```shell
-mount -t iso9660 -o loop,ro /home/fedora/Downloads/Fedora-Server-dvd-x86_64-37-1.7.iso /mnt/Fedora
+mount -t iso9660 -o loop,ro ~/Downloads/Fedora-Server-dvd-x86_64-37-1.7.iso /mnt/Fedora
 cobbler import --name=Fedora37 --arch=x86_64 --path=/mnt/Fedora
 cobbler distro edit --name Fedora37-x86_64 --kernel-options ""
 cat /var/lib/cobbler/templates/sample.ks | grep -v "\--useshadow" | grep -v ^install | sed 's,selinux --disabled,selinux --permissive,' | sed 's,rootpw --iscrypted \$default_password_crypted,rootpw --iscrypted \$default_password_crypted\nuser --groups=wheel --name=fedora --password=\$default_password_crypted --iscrypted --gecos="fedora",' | tee /var/lib/cobbler/templates/Fedora37.ks
@@ -573,4 +573,3 @@ tftp 127.0.0.1
 cat /etc/httpd/conf/httpd.conf
 cat /etc/httpd/conf.d/cobbler.conf
 ```
-
