Apply suggestions from code review
Do I need to sign these changes, or this is OK?

Co-authored-by: Enno G. <matrixfueller@gmail.com>

--- a/_posts/2025/2025-02-05-Cobbler-v3.3.7-OpenSUSE-Deployment-Guide.md
+++ b/_posts/2025/2025-02-05-Cobbler-v3.3.7-OpenSUSE-Deployment-Guide.md
@@ -19,7 +19,7 @@ Starting where the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-
 
 ## OpenSUSE Leap 15 PXE Deployment
 
-This guide has been tested with OpenSUSE Leap 15.4, 15.5, & 15.6, which can be obtained from the sites below:
+This guide has been tested with openSUSE Leap 15.4, 15.5, & 15.6, which can be obtained from the sites below:
 
 - [download.opensuse.org](https://download.opensuse.org/distribution/leap/)
 
@@ -101,7 +101,7 @@ Configure the Cobbler Profile to use the new autoinstall (`autoyast.xml`) templa
 cobbler profile edit --name SUSE-15.6-x86_64 --autoinstall suse-15.6-autoyast.xml 
 ```
 
-Create a new Cobbler System to automatically boot and install OpenSUSE Leap 15.6, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC or IP addresse of any other Cobbler System, and then sync up Cobbler:
+Create a new Cobbler System to automatically boot and install openSUSE Leap 15.6, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC or IP addresse of any other Cobbler System, and then sync up Cobbler:
 
 ```shell
 cobbler system add --name SUSE-15.6 --profile SUSE-15.6-x86_64 --netboot-enabled true --hostname SUSE-15-6 --interface eth0 --static true --mac-address "aa:bb:cc:dd:ee:ff" --ip-address 10.0.0.15 --gateway 10.0.0.1 --netmask 255.255.255.0 --name-servers "10.0.0.1 1.1.1.1 10.0.0.10"
@@ -115,9 +115,9 @@ cobbler sync
 
 ## Taking it Further (Leap Micro Deployment)
 
-With OpenSUSE Leap 15 deploying successfully as described above, the Cobbler server is also prepped to deploy OpenSUSE Leap Micro *(v5.5 tested)*
+With openSUSE Leap 15 deploying successfully as described above, the Cobbler server is also prepped to deploy openSUSE Leap Micro *(v5.5 tested)*
 
-Download the installation media and use the same autoinstall file and options to configure a new Cobbler System for deploying OpenSUSE Leap Micro 5.5
+Download the installation media and use the same autoinstall file and options to configure a new Cobbler System for deploying openSUSE Leap Micro 5.5
 
 ```shell
 cd ~/Downloads && wget https://slc-mirror.opensuse.org/distribution/leap-micro/5.5/product/iso/openSUSE-Leap-Micro-5.5-DVD-x86_64-Media.iso
