fixed formatting and rendering (indentations) on include statements/files, and fixed some typos

--- a/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
+++ b/_posts/2024/2024-12-02-Cobbler-v3.3.7-Debian-Deployment-Guide.md
@@ -301,7 +301,11 @@ Now the **PXE Client** should be able to boot from a generic/random MAC address 
 
     - The issue stems from the below section of the preseed file, retrieved drectly from Debian's official [stable](https://www.debian.org/releases/stable/example-preseed.txt) and [bookworm](https://www.debian.org/releases/bookworm/example-preseed.txt) example preseed files.
 
-{% include example-preseed-excerpt.txt.md path="_includes/example-preseed-excerpt.txt.md" %}
+{% capture file %}```shell
+{% include example-preseed-excerpt.txt path="_includes/example-preseed-excerpt.txt" %}```{% endcapture %}
+{% assign lines = file | newline_to_br | strip_newlines | split: "<br />" %}
+{% for line in lines %}{{ line | prepend: "      " }}
+{% endfor %}
 
     - As seen in the procedures above, `allow_unauthenticated` is set to true, which appears to only permit the installation to START when an untrusted repo mirror is found, but the mirror will be checked again before beginning the `apt-setup` phase, which `allow_unauthenticated` will not override.
 
