--- a/_posts/2025/2025-02-05-Cobbler-v3.3.7-OpenSUSE-Deployment-Guide.md
+++ b/_posts/2025/2025-02-05-Cobbler-v3.3.7-OpenSUSE-Deployment-Guide.md
@@ -171,22 +171,42 @@ cobbler sync
 	
 1. Edited files
 
-    - suse-15.6-autoyast.xml
+    - `/var/lib/cobbler/templates/suse-15.6-autoyast.xml`
 
-{% include suse-15.6-autoyast.xml.md path="_includes/suse-15.6-autoyast.xml.md" %}
+{% capture file %}```xml
+{% include suse-15.6-autoyast.xml path="_includes/suse-15.6-autoyast.xml" %}```{% endcapture %}
+{% assign lines = file | newline_to_br | strip_newlines | split: "<br />" %}
+{% for line in lines %}{{ line | prepend: "      " }}
+{% endfor %}
 
-    - suse-15.6-networking.xml
+    - `/var/lib/cobbler/snippets/suse-15.6-networking.xml`
 
-{% include suse-15.6-networking.xml.md path="_includes/suse-15.6-networking.xml.md" %}
+{% capture file %}```xml
+{% include suse-15.6-networking.xml path="_includes/suse-15.6-networking.xml" %}```{% endcapture %}
+{% assign lines = file | newline_to_br | strip_newlines | split: "<br />" %}
+{% for line in lines %}{{ line | prepend: "      " }}
+{% endfor %}
 
-    - suse-15.6_scriptwrapper.xml
+    - `/var/lib/cobbler/snippets/suse-15.6_scriptwrapper.xml`
 
-{% include suse-15.6_scriptwrapper.xml.md path="_includes/suse-15.6_scriptwrapper.xml.md" %}
+{% capture file %}```xml
+{% include suse-15.6_scriptwrapper.xml path="_includes/suse-15.6_scriptwrapper.xml" %}```{% endcapture %}
+{% assign lines = file | newline_to_br | strip_newlines | split: "<br />" %}
+{% for line in lines %}{{ line | prepend: "      " }}
+{% endfor %}
 
-    - autoinstall_start
+    - `/var/lib/cobbler/snippets/autoinstall_start`
 
-{% include autoinstall_start.md path="_includes/autoinstall_start.md" %}
+{% capture file %}```shell
+{% include autoinstall_start path="_includes/autoinstall_start" %}```{% endcapture %}
+{% assign lines = file | newline_to_br | strip_newlines | split: "<br />" %}
+{% for line in lines %}{{ line | prepend: "      " }}
+{% endfor %}
 
-    - autoinstall_done
+    - `/var/lib/cobbler/snippets/autoinstall_done`
 
-{% include autoinstall_done.md path="_includes/autoinstall_done.md" %}
+{% capture file %}```shell
+{% include autoinstall_done path="_includes/autoinstall_done" %}```{% endcapture %}
+{% assign lines = file | newline_to_br | strip_newlines | split: "<br />" %}
+{% for line in lines %}{{ line | prepend: "      " }}
+{% endfor %}
