minor fixes to previous guides

--- a/_posts/2024/2024-11-12-Cobbler-v3.3.6-Beginners-Guide.md
+++ b/_posts/2024/2024-11-12-Cobbler-v3.3.6-Beginners-Guide.md
@@ -106,7 +106,7 @@ Install **VirtualBox VM Guest Additions**, either from the YUM repos, or the Gue
 yum install virtualbox-guest-additions
 ```
 
-### customizing
+### Customizing
 
 Install your preferred Linux sys admin tools and configure some convenient bash settings, for example *(PS1 variable controls bash shell prompt)*:
 
@@ -573,3 +573,4 @@ tftp 127.0.0.1
 cat /etc/httpd/conf/httpd.conf
 cat /etc/httpd/conf.d/cobbler.conf
 ```
+
