Add Windows deployment guide and included file and fix link in Ubuntu guide

--- a/_posts/2025/2025-04-07-Cobbler-v3.3.7-Ubuntu-Deployment-Guide.md
+++ b/_posts/2025/2025-04-07-Cobbler-v3.3.7-Ubuntu-Deployment-Guide.md
@@ -25,7 +25,7 @@ Starting where the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-
 
 - Despite my efforts (and unlike the [Beginner's Guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html)) **Ubuntu 20.04 PXE clients will require an internet connection** at the time of installation, since the `fallback: offline-install` option is not available in that version's `cloud-init` implementation and was only introduced as of [Ubuntu 22.04 release](https://discourse.ubuntu.com/t/jammy-jellyfish-release-notes/24668)..
 
-    - Also unlike my [other](/blog/2024/12/02/Cobbler-v3.3.7-Debian-Deployment-Guide.html/) [guides](/blog/2025/02/05/Cobbler-v3.3.7-OpenSUSE-Deployment-Guide.html), this PXE deployment will use the installation media (ISO file) instead of a repo mirror when installing the target OS *(except for Ubuntu 20.04, however it still requires to use the ISO file in PXE process, so it's very similar and consistent)*, so even though the distribution will be imported as usual, it's important to make the ISO file available over HTTP as well.
+    - Also unlike my [other](/blog/2024/12/02/Cobbler-v3.3.7-Debian-Deployment-Guide.html) [guides](/blog/2025/02/05/Cobbler-v3.3.7-OpenSUSE-Deployment-Guide.html), this PXE deployment will use the installation media (ISO file) instead of a repo mirror when installing the target OS *(except for Ubuntu 20.04, however it still requires to use the ISO file in PXE process, so it's very similar and consistent)*, so even though the distribution will be imported as usual, it's important to make the ISO file available over HTTP as well.
 
 ## Cobbler Server Prep
 
@@ -250,7 +250,7 @@ cobbler sync
 
     - Cobbler is normally a dynamic and responsive app that implements many options, parameters, and configurations on-demand through `edit|add|remove|etc...` actions, not requiring a `cobbler sync` to commit most changes. However, it is recommended to run `cobbler sync` after any changes to a Cobbler Distro/Profile/System when using Cobbler sync-triggers in this manner *(editing DHCP configs, boot options, etc...)*, unless you're absolutely certain otherwise.
 
-    - Cobbler recommends writing triggers as Python modules and has a lot of good info in their [docs](https://cobbler.readthedocs.io/en/latest/user-guide/extending-cobbler.html#about), but I have only written bash scripts that slowly but surely accomplish my needs.
+    - Cobbler recommends writing triggers as Python modules and has a lot of good info in their [docs](https://cobbler.readthedocs.io/en/latest/user-guide/extending-cobbler.html#about), but the "old-style" bash script triggers used in this guide will get the job done, *slowly.*
 
 1. Troubleshooting the installation
 
