Add firmware toggle and minor fixes to Windows Guide

--- a/_posts/2025/2025-04-14-Cobbler-v3.3.7-Windows-Deployment-Guide.md
+++ b/_posts/2025/2025-04-14-Cobbler-v3.3.7-Windows-Deployment-Guide.md
@@ -23,7 +23,7 @@ Starting where the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-
 
     - More info on the issues encountered in the **Tips & Troubleshooting** section below.
 
-    - If running the PXE client as a VMWare Workstation/Fusion VM it is recommended to also run the Cobbler Server under the same VMWare host or another bare metal machine, using the same specs/settings as described in the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html).
+    - If running the PXE client as a VMWare VM it is recommended to also run the Cobbler Server under the same VMWare host or another bare metal machine, using the same specs/settings as described in the [Beginner's guide](/blog/2024/11/12/Cobbler-v3.3.6-Beginners-Guide.html).
 
     - Your experience may differ depending on your hardware and Windows and VirtualBox software versions and settings.
 
@@ -58,7 +58,7 @@ systemctl restart cobblerd
 
 Download the `wimboot` image from iPXE's GitHub to the Cobbler `loaders` directory and sync cobbler
 
-- Also, be sure to link the approriate bootloader images to the Cobbler `loaders` directory if not done already, since the PXE software included with VMWare Workstation/Fusion and VirtualBox VMs do not support downloads via HTTP
+- Also, be sure to link the approriate bootloader images to the Cobbler `loaders` directory if not done already *(since the PXE software included with VMWare Workstation/Fusion and VirtualBox VMs do not support downloads via HTTP)*.
 
 ```shell
 wget https://github.com/ipxe/wimboot/releases/latest/download/wimboot -P /var/lib/cobbler/loaders
@@ -83,7 +83,7 @@ Enable and start the smb service
 systemctl enable --now smb
 ```
 
-Now, fix the `dhcp.template` file to properly detect PXE client firmware type to enable iPXE chainloading to support HTTP downloads via iPXE.
+Now, fix the `dhcp.template` file to properly detect PXE client firmware type during DHCP and enable iPXE chainloading for a more reliable experience on PXE clients.
 
 ```shell
 sed -i 's,filename "http://\\\$cobbler_server/cblr/svc/op/ipxe/system/\\\$iface.owner";,filename "http://\$cobbler_server/cblr/svc/op/ipxe/system/\$iface.owner";\\n            } else if exists system-arch and option system-arch = 00:07 {\\n                filename "ipxe-x86_64.efi";\\n            } else if exists system-arch and option system-arch = 00:08 {\\n                filename "ipxe-x86_64.efi";\\n            } else if exists system-arch and option system-arch = 00:09 {\\n                filename "ipxe-x86_64.efi";,' /etc/cobbler/dhcp.template
@@ -137,6 +137,14 @@ mkdir /mnt/Windows10
 mount -o ro,loop ~/Downloads/Win10_22H2_English_x64.iso /mnt/Windows10
 cobbler import --name Win10 --path /mnt/Windows10
 ```
+
+**If the PXE client will use legacy-BIOS firmware** *(MBR partition scheme)* instead of UEFI, toggle `uefi` to `false` in the Cobbler Profile autoinstallation metadata:
+
+```shell
+cobbler profile edit --name Win10-x86_64 --autoinstall-meta 'uefi'='false' --in-place
+```
+
+> More info in Cobbler's [official docs](https://cobbler.readthedocs.io/en/v3.3.7/user-guide/wingen.html).
 
 Finally, create a new Cobbler System to PXE boot and automatically install Windows 10 Pro, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC or IP addresse of any other Cobbler System, then sync up Cobbler.
 
