--- a/_posts/2025/2025-04-07-Cobbler-v3.3.7-Ubuntu-Deployment-Guide.md
+++ b/_posts/2025/2025-04-07-Cobbler-v3.3.7-Ubuntu-Deployment-Guide.md
@@ -126,7 +126,7 @@ NAME="Ubuntu20-casper-x86_64" && cobbler distro edit --name $NAME --kernel-optio
 Since the PXE client will install the OS from the internet, create a new autoinstall (`cloud-init`) template from the file created above, changing the `apt` uri.
 
 ```shell
-sed -z 's,      uri: http://$http_server/cblr/links/$distro\n#      uri: http://us.archive.ubuntu.com/ubuntu,#      uri: http://$http_server/cblr/links/$distro\n      uri: http://us.archive.ubuntu.com/ubuntu,' /var/lib/cobbler/templates/cloud-init_user-data | tee /var/lib/cobbler/templates/Ubuntu20_cloud-init_user-data
+sed -z 's,      uri: http://$http_server/cblr/links/$distro\n##      uri: http://us.archive.ubuntu.com/ubuntu,##      uri: http://$http_server/cblr/links/$distro\n      uri: http://us.archive.ubuntu.com/ubuntu,' /var/lib/cobbler/templates/cloud-init_user-data | tee /var/lib/cobbler/templates/Ubuntu20_cloud-init_user-data
 ```
 
 Then configure it as the autoinstallation template for the Ubuntu 20.04 Cobbler Profile
@@ -135,7 +135,7 @@ Then configure it as the autoinstallation template for the Ubuntu 20.04 Cobbler 
 cobbler profile edit --name Ubuntu20-casper-x86_64 --autoinstall Ubuntu20_cloud-init_user-data
 ```
 
-Create a new Cobbler System to install Ubuntu 20.04 automatically based on the system's (PXE client's) MAC address, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, and being sure not to use a duplicate MAC or IP addresse of any other Cobbler System:
+Create a new Cobbler System to install Ubuntu 20.04 automatically based on the system's (PXE client's) MAC address, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, and being sure not to use a duplicate MAC or IP address of any other Cobbler System:
 
 ```shell
 NAME="Ubuntu20-auto" && cobbler system add --name $NAME --profile Ubuntu20-casper-x86_64 --kernel-options "root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu20/ubuntu-20.04.6-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/system/$NAME" --mac-address "aa:bb:cc:dd:ee:ff" --static true --ip-address "10.0.0.20" --netmask "255.255.255.0" --gateway "10.0.0.1" --name-servers "10.0.0.1 1.1.1.1 10.0.0.10" --hostname "Ubuntu20" --netboot-enabled true && unset NAME
@@ -169,11 +169,11 @@ cobbler import --name Ubuntu22 --path /mnt/Ubuntu
 mkdir -p /var/www/cobbler/pub/cloud-init/Ubuntu22
 cp ~/Downloads/ubuntu-22.04.5-live-server-amd64.iso /var/www/cobbler/pub/cloud-init/Ubuntu22/.
 
-cobbler distro edit --name Ubuntu22-casper-x86_64 --kernel-options 'root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu22/ubuntu-22.04.5-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/profile/Ubuntu22-casper-x86_64'
+NAME="Ubuntu22-casper-x86_64" && cobbler distro edit --name $NAME --kernel-options "root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu22/ubuntu-22.04.5-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/profile/$NAME" && unset NAME
 
 cobbler profile edit --name Ubuntu22-casper-x86_64 --autoinstall cloud-init_user-data
 
-NAME="Ubuntu22-auto" && cobbler system add --name $NAME --profile Ubuntu22-casper-x86_64 --kernel-options "root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu22/ubuntu-22.04.5-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/system/$NAME" --mac-address "aa:bb:cc:dd:ee:ff" --static true --ip-address "10.0.0.22" --netmask "255.255.255.0" --gateway "10.0.0.1" --name-servers "10.0.0.1 1.1.1.1 10.0.0.10" --hostname "Ubuntu22" --netboot-enabled true && NAME=""
+NAME="Ubuntu22-auto" && cobbler system add --name $NAME --profile Ubuntu22-casper-x86_64 --kernel-options "root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu22/ubuntu-22.04.5-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/system/$NAME" --mac-address "aa:bb:cc:dd:ee:ff" --static true --ip-address "10.0.0.22" --netmask "255.255.255.0" --gateway "10.0.0.1" --name-servers "10.0.0.1 1.1.1.1 10.0.0.10" --hostname "Ubuntu22" --netboot-enabled true && unset NAME
 
 cobbler sync
 ```
@@ -231,11 +231,11 @@ cobbler import --name Ubuntu24 --path /mnt/Ubuntu
 mkdir -p /var/www/cobbler/pub/cloud-init/Ubuntu24
 cp ~/Downloads/ubuntu-24.04.1-live-server-amd64.iso /var/www/cobbler/pub/cloud-init/Ubuntu24/.
 
-cobbler distro edit --name Ubuntu24-casper-x86_64 --kernel-options 'root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu24/ubuntu-24.04.1-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/profile/Ubuntu24-casper-x86_64'
+NAME="Ubuntu24-casper-x86_64" && cobbler distro edit --name $NAME --kernel-options "root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu24/ubuntu-24.04.1-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/profile/$NAME" && unset NAME
 
 cobbler profile edit --name Ubuntu24-casper-x86_64 --autoinstall cloud-init_user-data
 
-NAME="Ubuntu24-auto" && cobbler system add --name $NAME --profile Ubuntu24-casper-x86_64 --kernel-options "root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu24/ubuntu-24.04.1-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/system/$NAME" --mac-address "aa:bb:cc:dd:ee:ff" --static true --ip-address "10.0.0.24" --netmask "255.255.255.0" --gateway "10.0.0.1" --name-servers "10.0.0.1 1.1.1.1 10.0.0.10" --hostname "Ubuntu24" --netboot-enabled true && NAME=""
+NAME="Ubuntu24-auto" && cobbler system add --name $NAME --profile Ubuntu24-casper-x86_64 --kernel-options "root=/dev/ram0 ramdisk_size=1500000 ip=dhcp url=http://10.0.0.10/cblr/pub/cloud-init/Ubuntu24/ubuntu-24.04.1-live-server-amd64.iso autoinstall cloud-config-url=http://10.0.0.10/cblr/svc/op/autoinstall/system/$NAME" --mac-address "aa:bb:cc:dd:ee:ff" --static true --ip-address "10.0.0.24" --netmask "255.255.255.0" --gateway "10.0.0.1" --name-servers "10.0.0.1 1.1.1.1 10.0.0.10" --hostname "Ubuntu24" --netboot-enabled true && unset NAME
 
 cobbler sync
 ```
@@ -277,6 +277,8 @@ cobbler sync
     - [https://canonical-subiquity.readthedocs-hosted.com/en/latest/tutorial/providing-autoinstall.html](https://canonical-subiquity.readthedocs-hosted.com/en/latest/tutorial/providing-autoinstall.html)
 
 1. Additional references:
+
+    - (https://github.com/cobbler/cobbler/discussions/3573)[https://github.com/cobbler/cobbler/discussions/3573]
 
     - [https://github.com/cobbler/cobbler/issues/2339](https://github.com/cobbler/cobbler/issues/2339)
 
